--- a/pom.xml
+++ b/pom.xml
@@ -33,11 +33,10 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>io.awspring.cloud</groupId>
-            <artifactId>spring-cloud-aws-core</artifactId>
-            <version>2.3.1</version>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk</artifactId>
+            <version>1.11.486</version>
         </dependency>
-
     </dependencies>
 
     <build>
